# tcglabels

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  manage.py  pyproject.toml  requirements.txt  rxconfig.py
.github/instructions/: app.instructions.md
labels/: admin.py  models.py
tcglabels/: __init__.py  label_generator.py  models.py  state.py  tcg_search.py  tcglabels.py  template.py
tcglabels/components/: footer.py  navbar.py
tcglabels/pages/: __init__.py  from_dex.py  index.py  search.py
