[tool.poetry]
name = "tcglabels"
version = "0.1.0"
description = ""
authors = ["Lucas Howard <lhoward96@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
requests = "^2.32.3"
pillow = "^10.4.0"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.9.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.8.0"
djlint = "^1.35.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
