[project]
name = "tcglabels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow>=11.3.0",
    "reflex>=0.8.9",
    "reflex-enterprise>=0.3.2",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
]
